# penum

./: README.md
examples/: CMakeLists.txt  example.cpp  example_basic.cpp  example_mixed.cpp  example_same_size.cpp  example_same_type.cpp  example_template.cpp
include/: penum.hpp
